[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asserts/UI/cooldown.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SkillScene/Skill.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Asserts/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
font_data = SubResource( 1 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "active"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="Skill" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
expand = true
stretch_mode = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CooldownProgress" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
value = 80.0
texture_progress = ExtResource( 2 )
fill_mode = 5
nine_patch_stretch = true

[node name="CountdownLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
custom_colors/font_color = Color( 1, 1, 1, 0.9 )
custom_fonts/font = SubResource( 14 )
text = "xx"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/active = SubResource( 15 )

[connection signal="pressed" from="." to="." method="_on_Skill_pressed"]
